test skip packaging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,5 +59,7 @@ jobs:
       - name: Run chart-releaser
         # switch back to helm/chart-releaser-action if this contribution is ever merged
         uses: askcloudarchitech/chart-releaser-action@skip-packaging-option
+        with:
+          skip_packaging: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
