--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: custom packaging
         run: |
-          VERSION=${{ github.event.release.tag_name }}
+          VERSION=${{github.ref_name}}
           echo "VERSION=${VERSION:1}" >> $GITHUB_ENV
           rm -rf .cr-release-packages
           mkdir -p .cr-release-packages
