--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,10 +59,9 @@ jobs:
       - name: custom packaging
         run: |
           VERSION=${{github.ref_name}}
-          echo "VERSION=${VERSION:1}" >> $GITHUB_ENV
           rm -rf .cr-release-packages
           mkdir -p .cr-release-packages
-          helm package charts/youtube-stats-chart --app-version=$GITHUB_ENV --version=$GITHUB_ENV --destination=.cr-release-packages
+          helm package charts/youtube-stats-chart --app-version=${VERSION:1} --version=${VERSION:1} --destination=.cr-release-packages
 
       - name: Run chart-releaser
         # switch back to helm/chart-releaser-action if this contribution is ever merged
